Use a specialized function to check for blank lines